--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -54,7 +54,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./asteroids.exe"
+export_path="../../Downloads/asteroids.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
